Fix some edits on mobile version

--- a/src/app/account/user-account/user-account.component.scss
+++ b/src/app/account/user-account/user-account.component.scss
@@ -188,7 +188,6 @@
                     font-weight: 800;
                 }
                 &--num{
-                    color: #7AD178;
                     font-size: 15px;
                     font-weight: 800;
                 }
